--- a/index.html
+++ b/index.html
@@ -1,39 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vacation Time!</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <nav>
         Enter the Contest for the Vacation of a Lifetime
     </nav>
     <main>
         <h2>Vacation Contest Sign-Up Form</h2>
-        <form> <!-- TODO: Set Action and Method Properties -->
+        <form method="GET" action="./results.html"> <!-- TODO: Set Action and Method Properties -->
             <div>
                 <label for="firstname">Your First Name</label>
                 <input type="text" id="firstname" name="firstname">
                 <!-- TODO: Create a "lastname" input with type "text" -->
+                <label for="lastname">Your Last Name</label>
+                <input type="text" id="lastname" name="lastname">
             </div>
-            <!-- TODO: Make fieldset and legend -->
-            <!-- Todo: Email Input -->
-            <!-- Todo: Street Address Input -->
-            <!-- Todo: City, State, and Zip Inputs -->
 
+            <!-- TODO: Make fieldset and legend -->
+            <fieldset>
+                <legend>Your Contact Information</legend>
+                <!-- Todo: Email Input -->
+                <div>
+                    <label for="email">Your Email</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                <!-- Todo: Street Address Input -->
+                <div>
+                    <label for="address">Your Street Address</label>
+                    <input type="text" id="address" name="address">
+                </div>
+                <!-- Todo: City, State, and Zip Inputs -->
+                <div>
+                    <label for="city">Your City</label>
+                    <input type="text" id="city" name="city">
+                    <label for="state">Your State</label>
+                    <select name="state" id="state">
+                        <option value="AK">Alaska</option>
+                        <option value="AL">Alabama</option>
+                        <option value="AR">Arkansas</option>
+                        <option value="AZ">Arizona</option>
+                        <option value="CA">California</option>
+                        <option value="CT">Connecticut</option>
+                        <option value="CO">Colorado</option>
+                        <option value="DE">Delaware</option>
+                        <option value="FL">Florida</option>
+                        <option value="GA">Georgia</option>
+                        <option value="HI">Hawaii</option>
+                        <option value="IA">Iowa</option>
+                        <option value="ID">Idaho</option>
+                        <option value="IL">Illinois</option>
+                        <option value="IN">Indiana</option>
+                        <option value="KY">Kentucky</option>
+                        <option value="LA">Louisiana</option>
+                        <option value="MA">Massachussets</option>
+                        <option value="MD">Maryland</option>
+                        <option value="ME">Maine</option>
+                        <option value="MI">Michigan</option>
+                        <option value="MN">Minnesota</option>
+                        <option value="MO">Missouri</option>
+                        <option value="MS">Mississippi</option>
+                        <option value="MT">Montana</option>
+                        <option value="NC">North Carolina</option>
+                        <option value="ND">North Dakota</option>
+                        <option value="NE">Nebraska</option>
+                        <option value="NH">New Hampshire</option>
+                        <option value="NJ">New Jersey</option>
+                        <option value="NM">New Mexico</option>
+                        <option value="NV">Nevada</option>
+                        <option value="NY">New York</option>
+                        <option value="OK">Oklahoma</option>
+                        <option value="OH">Ohio</option>
+                        <option value="OR">Oregon</option>
+                        <option value="PA">Pennsylvania</option>
+                        <option value="RI">Rhode Island</option>
+                        <option value="SC">South Carolina</option>
+                        <option value="SD">South Dakota</option>
+                        <option value="TN">Tennessee</option>
+                        <option value="TX">Texas</option>
+                        <option value="UT">Utah</option>
+                        <option value="VA">Virginia</option>
+                        <option value="VT">Vermont</option>
+                        <option value="WA">Washington</option>
+                        <option value="WI">Wisconsin</option>
+                        <option value="WV">West Virginia</option>
+                        <option value="WY">Wyoming</option>
+                    </select>
+                    <label for="zip">Your Zipcode</label>
+                    <input type="text" id="zip" name="zip">
+                </div>
+            </fieldset>
             <!-- TODO: Second fieldset -->
             <!-- TODO: Radio buttons for selecting preferred destination -->
-            <!-- TODO: Color input for selecting favorite color -->
-            <!-- TODO: Checkboxes for selecting extra add-ons -->
-            
-            <!-- TODO: Submit Button -->
+            <fieldset>
+                <legend>Preferred Destination</legend>
+                <div>
+                    <h3>Choose a Destination</h3>
+                    <input type="radio" id="japan" name="location" value="japan">
+                    <label for="japan">Japan</label>
+                </div>
+                <div>
+                    <input type="radio" id="aruba" name="location" value="aruba">
+                    <label for="aruba">Aruba</label>
+                </div>
+                <div>
+                    <input type="radio" id="iceland" name="location" value="iceland">
+                    <label for="iceland">Iceland</label>
+                </div>
+                <div>
+                    <input type="radio" id="new-zealand" name="location" value="new-zealand">
+                    <label for="new-zealand">New Zealand</label>
+                </div>
+                <div>
+                    <input type="radio" id="tropics" name="location" value="tropics">
+                    <label for="tropics">Tropics</label>
+                </div>
+                <!-- TODO: Color input for selecting favorite color -->
+                <div>
+                    <label for="color">Select Your Favorite Color:</label>
+                    <input type="color" id="color" name="color">
+                </div>
+                <!-- TODO: Checkboxes for selecting extra add-ons -->
+                <fieldset>
+                    <legend> Extra Add-Ons</legend>
+                    <div>
+                        <input type="checkbox" id="sauna" name="extras" value="Sauna">
+                        <label for="sauna">Sauna Access</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="hottub" name="extras" value="HotTub">
+                        <label for="hottub">In-Room Hot Tub</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="airport" name="extras" value="airport">
+                        <label for="airport">Airport Pickup</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="drinks" name="extras" value="drinks">
+                        <label for="drinks">Champagne</label>
+                    </div>
+                </fieldset>
+                <!-- TODO: Submit Button -->
+                <input type="submit" value="Submit to Enter Contest">
         </form>
     </main>
     <footer>
         <h2>Resource Attributions</h2>
-        <p>All images provided for free use via <a href="https://unsplash.com/">Unsplash.com</a> whose generous <a href="https://unsplash.com/license">license details can be found here</a>.</p>
+        <p>All images provided for free use via <a href="https://unsplash.com/">Unsplash.com</a> whose generous <a
+                href="https://unsplash.com/license">license details can be found here</a>.</p>
     </footer>
 </body>
+
 </html>
